Add homefacts to the homepage
[WIP]
* Home facts just stored locally in component file
* Should more storage of data to `page.js`
* Home facts not yet used in question

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -4,4 +4,18 @@
   justify-content: space-between;
   align-items: center;
 }
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.leftColumn {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  margin: 1rem;
+}
+.rightColumn {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  margin: 1rem;
+}
 
