--- a/app/components/chat.module.css
+++ b/app/components/chat.module.css
@@ -1,11 +1,10 @@
 .title {
   font-size: 2rem;
   font-weight: 600;
-  margin-top: 2rem;
+  margin: 2rem 0rem;
 }
 .chatBar {
-  margin-top: 2rem;
-  width: 40rem;
+  width: 100%;
 }
 
 .lastQuestion {
@@ -14,7 +13,7 @@
   font-size: 1.2em;
   margin: 30px 20px 0px 20px;
   padding: 16px;
-  width: 600px;
+  width: 100%;
 }
 .result {
   background: #ddeeff;
@@ -22,5 +21,5 @@
   font-size: 1.2em;
   margin: 30px 20px 0px 20px;
   padding: 16px;
-  width: 600px;
+  width: 100%;
 }
