Tune up page appearance

--- a/app/components/chat.module.css
+++ b/app/components/chat.module.css
@@ -11,7 +11,7 @@
   background: #ddffee;
   border-radius: 10px;
   font-size: 1.2em;
-  margin: 30px 20px 0px 20px;
+  margin-top: 20px;
   padding: 16px;
   width: 100%;
 }
@@ -19,7 +19,7 @@
   background: #ddeeff;
   border-radius: 10px;
   font-size: 1.2em;
-  margin: 30px 20px 0px 20px;
+  margin-top: 20px;
   padding: 16px;
   width: 100%;
 }
