--- a/app/components/navbar.module.css
+++ b/app/components/navbar.module.css
@@ -1,9 +1,12 @@
-.topNav {
-  background-color: green;
-  border-radius: 2rem;
-  margin-bottom: 1rem;
+.navBox {
   width: 100%;
 }
+.topNav {
+  background-color: #205538;
+  display: flex;
+  justify-content: space-between;
+}
+
 .navItem {
   color: white;
   font-size: 1.5rem;
