--- a/app/page.module.css
+++ b/app/page.module.css
@@ -7,6 +7,7 @@
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  max-width: 1050px;
 }
 .leftColumn {
   grid-column-start: 1;
