--- a/app/components/AuthPage.module.css
+++ b/app/components/AuthPage.module.css
@@ -3,7 +3,7 @@
   font-family: 'Roboto', sans-serif;
   font-size: 3rem;
   font-weight: 500;
-  margin: 30px 0 20px 0;
+  margin: 50% 0 20px 0;
   text-align: center;
 }
 
@@ -43,7 +43,7 @@
 @media screen and (max-width: 768px) {
   .welcome, .byline {
     font-size: 2.5rem;
-    margin: 20px 0;
+    margin: 30px 0;
   }
   .container {
     flex-direction: column;
